@@ -9,6 +9,10 @@
 /** \page changes Changes
 \section vercvs CVS Version
 
+2006 January 25:
+- feature: static FieldType-objects for subclasses' id fields are now named Class::Own::Id so that they can be used in template methods
+- bug fix: litesql-gen compiles again with g++ 4.0 (explicit template specialization was missing)
+
 2006 January 21:
 - feature: litesql-gen writes static FieldType - objects for subclasses' id fields
 - bug fix: litesql-gen wrote broken RelationHandle::del - method. It deleted all rows.
@@ -44,11 +48,13 @@
 - added .cvsignore - files (by Eric McDonald)
 - versioning and packaging improvements (by Eric McDonald)
 - litesql-gen : internal restructuring
+
 \section ver0_3_1 Version 0.3.1
 - namespace - attribute is required now on (used in litesql-gen)
 - relation field type names are now consistent with object field type names (they start with uppercase letter) 
 - bug fix: litesql-gen rejected relations with two or more objects with no relation handles (duplicate handle)
 - better tests for backend databases to configure.ac (by Eric McDonald) 
+
 \section ver0_3_0 Version 0.3.0
 - anonymous enums removed from enumerated field values (in generated code), compiles now with g++-4.0
 - Relation::Row-class added, represents rows of relation table
